--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,13 @@
 export(check_structure_df)
 export(check_structure_wb)
 export(create_structure_template_excel)
+export(insert_new_category)
+export(insert_new_category_relationship)
+export(insert_new_source)
 export(message_structure)
+export(prepare_category_relationship_table)
+export(prepare_category_table)
+export(prepare_source_table)
 importFrom(magrittr,"%>%")
 importFrom(stats,complete.cases)
 importFrom(stats,setNames)
