--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: UMARfetchR
 Type: Package
 Title: What the Package Does (Title Case)
-Version: 0.2.0
+Version: 0.3.0
 Author: Who wrote it
 Maintainer: The package maintainer <yourself@somewhere.net>
 Description: More about what it does (maybe more than one line)
@@ -22,6 +22,7 @@ Imports:
     openxlsx (>= 4.2.5.2),
     RPostgres (>= 1.4.5),
     SURSfetchR (>= 0.0.4),
+    tidyr (>= 1.3.0),
     UMARaccessR (>= 0.1.0)
 Remotes:
     majazaloznik/SURSfetchR,
