--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,10 +7,12 @@ export(create_structure_template_excel)
 export(insert_new_category)
 export(insert_new_category_relationship)
 export(insert_new_source)
+export(insert_new_table)
 export(message_structure)
 export(prepare_category_relationship_table)
 export(prepare_category_table)
 export(prepare_source_table)
+export(prepare_table_table)
 importFrom(magrittr,"%>%")
 importFrom(stats,complete.cases)
 importFrom(stats,setNames)
