Add prep and import table dimension fun with tests and mocks.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,10 +8,12 @@ export(insert_new_category)
 export(insert_new_category_relationship)
 export(insert_new_source)
 export(insert_new_table)
+export(insert_new_table_dimensions)
 export(message_structure)
 export(prepare_category_relationship_table)
 export(prepare_category_table)
 export(prepare_source_table)
+export(prepare_table_dimensions_table)
 export(prepare_table_table)
 importFrom(magrittr,"%>%")
 importFrom(stats,complete.cases)
