--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,15 +6,18 @@ export(compute_table_codes)
 export(create_structure_template_excel)
 export(insert_new_category)
 export(insert_new_category_relationship)
+export(insert_new_dimension_levels)
 export(insert_new_source)
 export(insert_new_table)
 export(insert_new_table_dimensions)
 export(message_structure)
 export(prepare_category_relationship_table)
 export(prepare_category_table)
+export(prepare_dimension_levels_table)
 export(prepare_source_table)
 export(prepare_table_dimensions_table)
 export(prepare_table_table)
 importFrom(magrittr,"%>%")
 importFrom(stats,complete.cases)
+importFrom(stats,na.omit)
 importFrom(stats,setNames)
