Add prep and import fun for series table w tests and mocks.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(create_structure_template_excel)
 export(insert_new_category)
 export(insert_new_category_relationship)
 export(insert_new_dimension_levels)
+export(insert_new_series)
 export(insert_new_source)
 export(insert_new_table)
 export(insert_new_table_dimensions)
@@ -14,6 +15,7 @@ export(message_structure)
 export(prepare_category_relationship_table)
 export(prepare_category_table)
 export(prepare_dimension_levels_table)
+export(prepare_series_table)
 export(prepare_source_table)
 export(prepare_table_dimensions_table)
 export(prepare_table_table)
