--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(check_structure_df)
 export(compute_series_codes)
+export(compute_series_names)
 export(compute_table_codes)
 export(create_structure_template_excel)
 export(insert_new_category)
