--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(insert_new_category)
 export(insert_new_category_relationship)
 export(insert_new_dimension_levels)
 export(insert_new_series)
+export(insert_new_series_levels)
 export(insert_new_source)
 export(insert_new_table)
 export(insert_new_table_dimensions)
@@ -16,6 +17,7 @@ export(message_structure)
 export(prepare_category_relationship_table)
 export(prepare_category_table)
 export(prepare_dimension_levels_table)
+export(prepare_series_levels_table)
 export(prepare_series_table)
 export(prepare_source_table)
 export(prepare_table_dimensions_table)
