--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(insert_new_source)
 export(insert_new_table)
 export(insert_new_table_dimensions)
 export(message_structure)
+export(parse_structure)
 export(prepare_category_relationship_table)
 export(prepare_category_table)
 export(prepare_dimension_levels_table)
