--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(compute_table_codes)
 export(create_structure_template_excel)
 export(insert_new_category)
 export(insert_new_category_relationship)
+export(insert_new_category_table)
 export(insert_new_dimension_levels)
 export(insert_new_series)
 export(insert_new_series_levels)
@@ -17,6 +18,7 @@ export(message_structure)
 export(parse_structure)
 export(prepare_category_relationship_table)
 export(prepare_category_table)
+export(prepare_category_table_table)
 export(prepare_dimension_levels_table)
 export(prepare_series_levels_table)
 export(prepare_series_table)
