--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,10 +12,13 @@ LazyData: true
 Suggests: 
     covr,
     dittodb,
+    knitr,
+    rmarkdown,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 RoxygenNote: 7.2.3
 Imports: 
+    bookdown (>= 0.34),
     DBI (>= 1.1.3),
     dplyr (>= 1.1.2),
     magrittr (>= 2.0.3),
@@ -27,3 +30,4 @@ Imports:
 Remotes:
     majazaloznik/SURSfetchR,
     majazaloznik/UMARaccessR
+VignetteBuilder: knitr
