Add prep and import struc function and fix compute table fun, plus all the fcking mocks and tests cleaned up

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(insert_new_table)
 export(insert_new_table_dimensions)
 export(message_structure)
 export(parse_structure)
+export(prep_and_import_structure)
 export(prepare_category_relationship_table)
 export(prepare_category_table)
 export(prepare_category_table_table)
