Update structure back to excel fun and test

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ export(prepare_series_table)
 export(prepare_source_table)
 export(prepare_table_dimensions_table)
 export(prepare_table_table)
+export(update_structure_excel)
 importFrom(magrittr,"%>%")
 importFrom(stats,complete.cases)
 importFrom(stats,na.omit)
