--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(insert_new_series_levels)
 export(insert_new_source)
 export(insert_new_table)
 export(insert_new_table_dimensions)
+export(main_structure)
 export(message_structure)
 export(parse_structure)
 export(prep_and_import_structure)
