--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(compute_series_codes)
 export(compute_series_names)
 export(compute_table_codes)
 export(create_structure_template_excel)
+export(insert_new_author)
 export(insert_new_category)
 export(insert_new_category_relationship)
 export(insert_new_category_table)
@@ -22,6 +23,7 @@ export(prepare_category_relationship_table)
 export(prepare_category_table)
 export(prepare_category_table_table)
 export(prepare_dimension_levels_table)
+export(prepare_new_author_table)
 export(prepare_series_levels_table)
 export(prepare_series_table)
 export(prepare_source_table)
