Prepare and insert new vintage and data tables with tests and mocks

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,8 @@ export(compute_series_codes)
 export(compute_series_names)
 export(compute_table_codes)
 export(create_structure_template_excel)
+export(get_interval_from_period)
+export(insert_data_points)
 export(insert_new_author)
 export(insert_new_category)
 export(insert_new_category_relationship)
@@ -19,6 +21,7 @@ export(insert_new_series_levels)
 export(insert_new_source)
 export(insert_new_table)
 export(insert_new_table_dimensions)
+export(insert_new_vintage)
 export(main_structure)
 export(message_structure)
 export(parse_structure)
@@ -26,6 +29,7 @@ export(prep_and_import_structure)
 export(prepare_category_relationship_table)
 export(prepare_category_table)
 export(prepare_category_table_table)
+export(prepare_data_table)
 export(prepare_dimension_levels_table)
 export(prepare_new_author_table)
 export(prepare_series_levels_table)
@@ -33,6 +37,7 @@ export(prepare_series_table)
 export(prepare_source_table)
 export(prepare_table_dimensions_table)
 export(prepare_table_table)
+export(prepare_vintage_table)
 export(update_structure_excel)
 importFrom(magrittr,"%>%")
 importFrom(stats,complete.cases)
