--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ export(insert_new_source)
 export(insert_new_table)
 export(insert_new_table_dimensions)
 export(insert_new_vintage)
+export(main_data)
 export(main_structure)
 export(message_structure)
 export(parse_structure)
