--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,7 +24,6 @@ export(insert_new_table_dimensions)
 export(insert_new_vintage)
 export(main_data)
 export(main_structure)
-export(message_structure)
 export(parse_structure)
 export(prep_and_import_structure)
 export(prepare_category_relationship_table)
@@ -39,6 +38,7 @@ export(prepare_source_table)
 export(prepare_table_dimensions_table)
 export(prepare_table_table)
 export(prepare_vintage_table)
+export(split_structure)
 export(update_structure_excel)
 importFrom(magrittr,"%>%")
 importFrom(stats,complete.cases)
