Added create_data_template function, but really clusterfucked on the add_new_author tests, đizs..

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(check_structure_df)
 export(compute_series_codes)
 export(compute_series_names)
 export(compute_table_codes)
+export(create_data_template_excel)
 export(create_structure_template_excel)
 export(get_interval_from_period)
 export(insert_data_points)
