--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,6 +21,7 @@ Imports:
     bookdown (>= 0.34),
     DBI (>= 1.1.3),
     dplyr (>= 1.1.2),
+    gmailr (>= 1.0.1),
     magrittr (>= 2.0.3),
     openxlsx (>= 4.2.5.2),
     RPostgres (>= 1.4.5),
