--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(compute_series_names)
 export(compute_table_codes)
 export(create_data_template_excel)
 export(create_structure_template_excel)
+export(email_log)
 export(get_interval_from_period)
 export(insert_data_points)
 export(insert_new_author)
@@ -40,6 +41,7 @@ export(prepare_table_dimensions_table)
 export(prepare_table_table)
 export(prepare_vintage_table)
 export(split_structure)
+export(update_metadata)
 export(update_structure_excel)
 importFrom(magrittr,"%>%")
 importFrom(stats,complete.cases)
