--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,6 +41,7 @@ export(prepare_table_dimensions_table)
 export(prepare_table_table)
 export(prepare_vintage_table)
 export(split_structure)
+export(update_data)
 export(update_metadata)
 export(update_structure_excel)
 importFrom(magrittr,"%>%")
