--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,6 +40,7 @@ export(prepare_source_table)
 export(prepare_table_dimensions_table)
 export(prepare_table_table)
 export(prepare_vintage_table)
+export(read_codes_from_metadata_excel)
 export(split_structure)
 export(update_data)
 export(update_metadata)
