Switch to period input as date and fix downstream.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,7 @@ export(prepare_category_table_table)
 export(prepare_data_table)
 export(prepare_dimension_levels_table)
 export(prepare_new_author_table)
+export(prepare_periods)
 export(prepare_series_levels_table)
 export(prepare_series_table)
 export(prepare_source_table)
